@@ -63,4 +63,5 @@
 	<string id="2059">Hack librtmp ao iniciar</string>
 	<string id="2060">Existe uma nova versão do librtmp.</string>
 	<string id="2061">Deseja actualizar?</string>
+	<string id="2062">Tempo até o hack ser aplicado</string>
 </strings>
