@@ -3,6 +3,9 @@
    <category label="2052">
       <setting id="auto_update_librtmp" type="bool" label="2058" visible="true" default="false"/>
    </category>
+   <category label="Android">
+      <setting id="start_time" label="2062" type="slider" default="1" range="0,10" option="int" />
+   </category>
    <category label="RaspberryPI">
       <setting id="force-openelec" type="bool" label="2055" visible="true" default="false"/>
 	  <setting id="librtmp_path" type="text" label="Librtmp Path" default="" visible="False"/>
