@@ -17,10 +17,13 @@ class service:
 		if xbmc.getCondVisibility('system.platform.Android'):
 			if librtmp.android_hack_checker():
 				md5 = librtmp.abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/android.xml.md5")
-				librtmp_path = os.path.join(librtmp.android_xbmc_path(), "lib", "librtmp.so")
+				xbmc_path = librtmp.android_xbmc_path()
+				librtmp_path = os.path.join(xbmc_path, "lib", "librtmp.so")
+				aux = os.path.join(xbmc_path, "lib", "libxbrtmp.so")
+				if os.path.exists(aux): librtmp_path = aux
 				if not librtmp.md5sum_verified(librtmp_path) == md5:
 					my_librtmp = os.path.join(addonfolder,"resources","android_hack","librtmp.so")
-					xbmc.sleep(1000)
+					xbmc.sleep(int(selfAddon.getSetting('start_time'))*1000)
 					os.system("su -c 'cat "+my_librtmp+" > "+librtmp_path+"'")
 					os.system("su -c 'chmod 755 "+librtmp_path+"'")
 			if auto_update_librtmp: librtmp.librtmp_android(True)
